Menus pour la Ville (#52)
* Fix Crash and ItemStack contestShell

* Change name of Bank City to Chest City

* Add Structure of Menu

* Add Structure of Menu (2)

* Complete CityMenu + add getPlayerSkull

* Add ConfirmMenu ia

* Update ConfirmMenu

* Add Upgrade Button on ChestMenu

* Add Start of Bank Menu

* Add Menu of Bank City (Withdraw and Deposit)
- sign input

* Fix error

* Sonar Patch

* Change motd

* Revert "Fix error"

This reverts commit 06964e955f31f684092e296e2a191daca389114b.

* Fix

* Revert "Fix"

This reverts commit 3afe305f329c856a275d236e82b4f1a738146e0c.

* Reapply "Fix error"

This reverts commit 88a2f7400c8d2aa40220c0fb5f4b19b116ed022a.

* Fix of Contest

* Update and Fix of TransferMenu, CityMenu

Fix java.lang.IllegalStateException: <CityEvent> may only be triggered synchronously. (2)

Fix java.lang.IllegalStateException: <CityEvent> may only be triggered synchronously.

Add New Menu (Transfer Owner, Rename, Delete)

* Fix of isInputCityName

Fix of Methods

* Fix builds

* Fixes

Fix ConcurrentModificationException

Fix forgetCity
Cela n'etait pas executé entierement. un try catch etait la solution

Add a option for execute methods with param in ConfirmMenu.java

Fix builds

* Fix of Message and try catch

* Add Map Claim Menu

* Add Search Button

* Reorgenize CityPermission

* Add Menu for player in city

* Method sendMessageType => sendMessage

* Menu Invite + Menu Player gestion

* Fix Chunk Claiming in Menu

* Change on Test by ltuffery

* Fix leaveCity method

* Change Money Display

* Fix Build

* Fix Build

* Fix createCity

* Reorder menu package

* Add CityConditions
- permet de centraliser les conditions pour qu'une action se fasse sur les menus et les commandes simulatement.

* Fix createCommandCity

* Add convertor second to Xj Xh Xm Xs

* Add comptability to Mascots and CityType

* Fix CityMenu not launching when waiting for mascot placement

* Add comptability with Free claim

* Add Comptability with new perm mascots and typ